--- a/src/components/Footer.module.scss
+++ b/src/components/Footer.module.scss
@@ -68,6 +68,14 @@ $font-weight-bold: 700;
   font-size: 1.5rem;
 }
 
+.profileAvatar {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+}
+
 .brandName {
   font-size: 1.8rem;
   font-weight: 700;
