--- a/src/components/About.module.scss
+++ b/src/components/About.module.scss
@@ -170,7 +170,7 @@
 
 .timelineContent {
   background: #1e293b;
-  border: 1px solid $border;
+  border: 2px solid #ffffff;
   border-radius: 12px;
   padding: 1rem 1.25rem;
 }
