--- a/src/components/Skills.module.scss
+++ b/src/components/Skills.module.scss
@@ -249,11 +249,12 @@ $slate-dark: #1E293B;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 12rem;
   z-index: 1;
-  gap: 12rem;
+  gap: 6rem;
   width: 100%;
   justify-self: center;
+  margin-top: -5rem;
+  margin-bottom: 10rem;
 }
 
 .category {
@@ -269,8 +270,8 @@ $slate-dark: #1E293B;
   backdrop-filter: blur(8px);
   border-radius: 16px;
   padding: 1.25rem;
-  border: 3.5px solid $color-green;
-  /* Green accent for backend skills */
+  border: 3.5px solid #8B5CF6;
+  /* Purple accent for backend skills */
   transition: all 0.3s ease;
   min-height: 300px;
   display: flex;
@@ -282,8 +283,8 @@ $slate-dark: #1E293B;
   backdrop-filter: blur(8px);
   border-radius: 16px;
   padding: 1.25rem;
-  border: 3.5px solid $color-blue;
-  /* Blue accent for frontend skills */
+  border: 3.5px solid #ffffff;
+  /* White border for frontend skills */
   transition: all 0.3s ease;
   min-height: 600px;
   display: flex;
@@ -310,7 +311,7 @@ $slate-dark: #1E293B;
   backdrop-filter: blur(8px);
   border-radius: 16px;
   padding: 1.25rem;
-  border: 3.5px solid $color-yellow;
+  border: 3.5px solid #FACC15;
   /* Yellow accent for development tools */
   transition: all 0.3s ease;
   min-height: 300px;
