--- a/src/components/Skills.module.scss
+++ b/src/components/Skills.module.scss
@@ -45,14 +45,14 @@ $slate-dark: #1E293B;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 1.5rem;
+  margin-bottom: 3rem;
 }
 
 .emoji {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1.5rem;
   line-height: 1;
   color: $secondary;
   font-size: 6rem;
@@ -73,6 +73,7 @@ $slate-dark: #1E293B;
   display: grid;
   width: 100%;
   grid-template-columns: 2.5fr 600px 2.5fr; /* 3 columns: frontend, middle (backend+avatars+tools), soft skills */
+  gap: 1rem;
   margin: 2rem 0;
   z-index: 1;
 }
@@ -282,8 +283,8 @@ $slate-dark: #1E293B;
   backdrop-filter: blur(8px);
   border-radius: 16px;
   padding: 1.25rem;
-  border: 3.5px solid #ffffff;
-  /* White border for frontend skills */
+  border: 3.5px solid #10B981;
+  /* Green border for frontend skills */
   transition: all 0.3s ease;
   min-height: 600px;
   display: flex;
